all need bug fixes. updated a few designs and aranged some css

--- a/login.html
+++ b/login.html
@@ -147,6 +147,15 @@
       background-color: whitesmoke;
       background-image: radial-gradient(lightgreen, whitesmoke);
     }
+
+    @media screen and (max-width: 700px){
+    header {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+  }
+
   </style>
 </head>
 
@@ -154,13 +163,6 @@
   <header>
     <div class="container">
       <img src="images/bowl.png" alt="logo" class="logo">
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">Profile</a></li>
-        </ul>
-      </nav>
     </div>
   </header>
   <br><br>
