--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>Profile BBY06</title>
+  <title>Quiz BBY06</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -119,7 +119,7 @@
     }
 
     nav a:hover {
-      color:black;
+      color: black;
       background-color: whitesmoke;
       background-image: radial-gradient(lightgreen, whitesmoke);
     }
@@ -134,106 +134,97 @@
       justify-content: center;
     }
 
-    @media screen and (max-width: 700px){
-    header {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
+    @media screen and (max-width: 700px) {
+      header {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
     }
-  }
-
   </style>
 
   <!-- link to all the api keys for the project -->
   <script src="scripts/my_script.js"></script>
-  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-
-
 </head>
 
 <body>
 
-
   <header>
 
     <div class="container">
-
       <img src="images/bowl.png" alt="logo" class="logo">
-      
-
     </div>
+
   </header>
 
   <div class="container rounded bg-white mt-5 mb-5">
     <div class="row justify-content-center">
       <div class="col">
-      <h1 style="font-size: 6vw;">Welcome to <span style="color: green;">Fitmeal</span></h1>
-      <h1 style="text-decoration: underline; color: darkgreen;"> Do you have any food or diet restrictions?</h1>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1">
-            <label class="form-check-label" for="flexRadioDefault1">
-              Vegetarian
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault2">
-            <label class="form-check-label" for="flexRadioDefault2">
-              Vegan
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1">
-            <label class="form-check-label" for="flexRadioDefault1">
-              Pescatarian
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault2">
-            <label class="form-check-label" for="flexRadioDefault2">
-              Gluten-Free
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1">
-            <label class="form-check-label" for="flexRadioDefault1">
-              Lactose-Free
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault2">
-            <label class="form-check-label" for="flexRadioDefault2">
-              Keto
-            </label>
-          </div>
-          <h1 style="text-decoration: underline;  color: darkgreen;">Do you have any food or diet preferences?</h1>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault2">
-            <label class="form-check-label" for="flexRadioDefault2">
-              Spicy
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault2">
-            <label class="form-check-label" for="flexRadioDefault2">
-              High Protein
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault2">
-            <label class="form-check-label" for="flexRadioDefault2">
-              Snack/Appetizer
-            </label>
-          </div>
+        <h1 style="font-size: 6vw;">Welcome to <span style="color: green;">Fitmeal</span></h1>
+        <h1 style="text-decoration: underline; color: darkgreen;"> Do you have any food or diet restrictions?</h1>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault1">
+          <label class="form-check-label" for="flexRadioDefault1">
+            Vegetarian
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault2">
+          <label class="form-check-label" for="flexRadioDefault2">
+            Vegan
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault3">
+          <label class="form-check-label" for="flexRadioDefault3">
+            Pescatarian
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault4">
+          <label class="form-check-label" for="flexRadioDefault4">
+            Gluten-Free
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault5">
+          <label class="form-check-label" for="flexRadioDefault5">
+            Lactose-Free
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault6">
+          <label class="form-check-label" for="flexRadioDefault6">
+            Keto
+          </label>
+        </div>
+        <h1 style="text-decoration: underline;  color: darkgreen;">Do you have any food or diet preferences?</h1>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault7">
+          <label class="form-check-label" for="flexRadioDefault7">
+            Spicy
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault8">
+          <label class="form-check-label" for="flexRadioDefault8">
+            High Protein
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault9">
+          <label class="form-check-label" for="flexRadioDefault9">
+            Snack/Appetizer
+          </label>
+        </div>
         <div class="d-flex justify-content-center mt-5">
           <button type="button" class="btn btn-secondary" onclick="editUserInfo()">Edit</button>
           <span style="width: 10px"></span>
           <button type="button" class="btn btn-success" onclick="saveUserInfo()">Save</button>
         </div>
-    </div>
+      </div>
     </div>
   </div>
-
-  
 
   <script>
     var currentUser;
@@ -245,6 +236,7 @@
 
           //go to the correct user document by referencing to the user uid
           currentUser = db.collection("users").doc(user.uid)
+
           //get the document for current user.
           currentUser.get()
             .then(userDoc => {
@@ -279,8 +271,8 @@
     }
 
     function saveUserInfo() {
-      name = document.getElementById('nameInput').value;       //get the value of the field with id="nameInput"
-      school = document.getElementById('schoolInput').value;     //get the value of the field with id="schoolInput"
+      name = document.getElementById('nameInput').value; //get the value of the field with id="nameInput"
+      school = document.getElementById('schoolInput').value; //get the value of the field with id="schoolInput"
       city = document.getElementById('cityInput').value;
 
       currentUser.update({
@@ -290,13 +282,8 @@
       })
 
       document.getElementById('personalInfoFields').disabled = true;
-
-
     }
   </script>
-
-
-
 
 </body>
 
